# serializer version: 1
# name: ProcessTransferJobApplicationTest.test_job_application_transfer_redirection[job application transfer message]
  '<p>La candidature de <b>&lt;&gt;html escaped&lt;&gt; Doe</b> a bien été transférée à la SIAE <b>Acme inc.</b>, 112 rue de la Croix-Nivert, 75015 Paris.</p><p>Pour la consulter, rendez-vous sur son tableau de bord en changeant de structure.</p>'
# ---
# name: test_reload_contract_type_and_options[APPRENTICESHIP]
  '''
  
  <div id="geiq_contract_type_and_options_block">
      <div class="form-group is-invalid form-group-required"><label class="form-label" for="id_prehiring_guidance_days">Nombre de jours d’accompagnement avant contrat</label><input type="number" name="prehiring_guidance_days" min="0" class="form-control is-invalid" placeholder="Nombre de jours d’accompagnement avant contrat" required id="id_prehiring_guidance_days">
      <div class="invalid-feedback">Ce champ est obligatoire.</div>
  
  <div class="form-text">Laissez "0" si vous n'avez pas accompagné le candidat avant son embauche</div>
  </div>
      <div class="form-group form-group-required"><label class="form-label" for="id_contract_type">Type de contrat</label><select name="contract_type" hx-trigger="change" hx-post="/apply/10/accept/reload_contract_type_and_options" hx-swap="outerHTML" hx-target="#geiq_contract_type_and_options_block" class="form-select" required id="id_contract_type">
    <option value="">---------</option>
  
    <option value="APPRENTICESHIP" selected>Contrat d&#x27;apprentissage</option>
  
    <option value="PROFESSIONAL_TRAINING">Contrat de professionalisation</option>
  
    <option value="OTHER">Autre type de contrat</option>
  
  </select></div>
      <div class="form-group"><div class="form-check"><input type="checkbox" name="inverted_vae_contract" class="form-check-input" disabled id="id_inverted_vae_contract"><label class="form-check-label" for="id_inverted_vae_contract">Contrat associé à une VAE inversée</label></div></div>
      <div id="contractTypeDetails" class="d-none">
          <div class="form-group"><label class="form-label" for="id_contract_type_details">Précisions sur le type de contrat</label><textarea name="contract_type_details" cols="40" rows="2" class="form-control" placeholder="Précisions sur le type de contrat" id="id_contract_type_details">
  </textarea><div class="form-text">Si vous avez choisi un autre type de contrat, merci de bien vouloir fournir plus de précisions</div>
  </div>
      </div>
      <div class="form-group form-group-required"><label class="form-label" for="id_nb_hours_per_week">Nombre d&#x27;heures par semaine</label><input type="number" name="nb_hours_per_week" min="0" class="form-control" placeholder="Nombre d&#x27;heures par semaine" required id="id_nb_hours_per_week"></div>
  </div>
  
  '''
# ---
# name: test_reload_contract_type_and_options[OTHER]
  '''
  
  <div id="geiq_contract_type_and_options_block">
      <div class="form-group is-invalid form-group-required"><label class="form-label" for="id_prehiring_guidance_days">Nombre de jours d’accompagnement avant contrat</label><input type="number" name="prehiring_guidance_days" min="0" class="form-control is-invalid" placeholder="Nombre de jours d’accompagnement avant contrat" required id="id_prehiring_guidance_days">
      <div class="invalid-feedback">Ce champ est obligatoire.</div>
  
  <div class="form-text">Laissez "0" si vous n'avez pas accompagné le candidat avant son embauche</div>
  </div>
      <div class="form-group form-group-required"><label class="form-label" for="id_contract_type">Type de contrat</label><select name="contract_type" hx-trigger="change" hx-post="/apply/10/accept/reload_contract_type_and_options" hx-swap="outerHTML" hx-target="#geiq_contract_type_and_options_block" class="form-select" required id="id_contract_type">
    <option value="">---------</option>
  
    <option value="APPRENTICESHIP">Contrat d&#x27;apprentissage</option>
  
    <option value="PROFESSIONAL_TRAINING">Contrat de professionalisation</option>
  
    <option value="OTHER" selected>Autre type de contrat</option>
  
  </select></div>
      <div class="form-group"><div class="form-check"><input type="checkbox" name="inverted_vae_contract" class="form-check-input" disabled id="id_inverted_vae_contract"><label class="form-check-label" for="id_inverted_vae_contract">Contrat associé à une VAE inversée</label></div></div>
      <div id="contractTypeDetails" >
          <div class="form-group is-invalid"><label class="form-label" for="id_contract_type_details">Précisions sur le type de contrat</label><textarea name="contract_type_details" cols="40" rows="2" class="form-control is-invalid" placeholder="Précisions sur le type de contrat" id="id_contract_type_details">
  </textarea>
      <div class="invalid-feedback">Les précisions sont nécessaires pour ce type de contrat</div>
  
  <div class="form-text">Si vous avez choisi un autre type de contrat, merci de bien vouloir fournir plus de précisions</div>
  </div>
      </div>
      <div class="form-group form-group-required"><label class="form-label" for="id_nb_hours_per_week">Nombre d&#x27;heures par semaine</label><input type="number" name="nb_hours_per_week" min="0" class="form-control" placeholder="Nombre d&#x27;heures par semaine" required id="id_nb_hours_per_week"></div>
  </div>
  
  '''
# ---
# name: test_reload_contract_type_and_options[PROFESSIONAL_TRAINING]
  '''
  
  <div id="geiq_contract_type_and_options_block">
      <div class="form-group is-invalid form-group-required"><label class="form-label" for="id_prehiring_guidance_days">Nombre de jours d’accompagnement avant contrat</label><input type="number" name="prehiring_guidance_days" min="0" class="form-control is-invalid" placeholder="Nombre de jours d’accompagnement avant contrat" required id="id_prehiring_guidance_days">
      <div class="invalid-feedback">Ce champ est obligatoire.</div>
  
  <div class="form-text">Laissez "0" si vous n'avez pas accompagné le candidat avant son embauche</div>
  </div>
      <div class="form-group form-group-required"><label class="form-label" for="id_contract_type">Type de contrat</label><select name="contract_type" hx-trigger="change" hx-post="/apply/10/accept/reload_contract_type_and_options" hx-swap="outerHTML" hx-target="#geiq_contract_type_and_options_block" class="form-select" required id="id_contract_type">
    <option value="">---------</option>
  
    <option value="APPRENTICESHIP">Contrat d&#x27;apprentissage</option>
  
    <option value="PROFESSIONAL_TRAINING" selected>Contrat de professionalisation</option>
  
    <option value="OTHER">Autre type de contrat</option>
  
  </select></div>
      <div class="form-group"><div class="form-check"><input type="checkbox" name="inverted_vae_contract" class="form-check-input" id="id_inverted_vae_contract"><label class="form-check-label" for="id_inverted_vae_contract">Contrat associé à une VAE inversée</label></div></div>
      <div id="contractTypeDetails" class="d-none">
          <div class="form-group"><label class="form-label" for="id_contract_type_details">Précisions sur le type de contrat</label><textarea name="contract_type_details" cols="40" rows="2" class="form-control" placeholder="Précisions sur le type de contrat" id="id_contract_type_details">
  </textarea><div class="form-text">Si vous avez choisi un autre type de contrat, merci de bien vouloir fournir plus de précisions</div>
  </div>
      </div>
      <div class="form-group form-group-required"><label class="form-label" for="id_nb_hours_per_week">Nombre d&#x27;heures par semaine</label><input type="number" name="nb_hours_per_week" min="0" class="form-control" placeholder="Nombre d&#x27;heures par semaine" required id="id_nb_hours_per_week"></div>
  </div>
  
  '''
# ---
# name: test_reload_qualification_fields[CCN]
  '''
  
  <div id="geiq_qualification_fields_block">
      <div class="form-group form-group-required"><label class="form-label" for="id_qualification_type">Type de qualification visé</label><select name="qualification_type" hx-trigger="change" hx-post="/apply/10/accept/reload_qualification_fields" hx-swap="outerHTML" hx-target="#geiq_qualification_fields_block" class="form-select" required id="id_qualification_type">
    <option value="">---------</option>
  
    <option value="STATE_DIPLOMA">Diplôme d&#x27;état ou titre homologué</option>
  
    <option value="CQP">CQP</option>
  
    <option value="CCN" selected>Positionnement de CCN</option>
  
  </select></div>
      <div class="form-group form-group-required"><label class="form-label" for="id_qualification_level">Niveau de qualification</label><select name="qualification_level" class="form-select" required id="id_qualification_level">
    <option value="" selected>---------</option>
  
    <option value="LEVEL_3">Niveau 3 (CAP, BEP)</option>
  
    <option value="LEVEL_4">Niveau 4 (BP, Bac général, Techno ou Pro, BT)</option>
  
    <option value="LEVEL_5">Niveau 5 ou + (Bac+2 ou +)</option>
  
    <option value="NOT_RELEVANT">Non concerné</option>
  
  </select></div>
      <div class="form-group form-group-required"><label class="form-label" for="id_planned_training_hours">Nombre d&#x27;heures de formation prévues</label><input type="number" name="planned_training_hours" value="0" min="0" class="form-control" placeholder="Nombre d&#x27;heures de formation prévues" required id="id_planned_training_hours"></div>
  </div>
  
  '''
# ---
# name: test_reload_qualification_fields[CQP]
  '''
  
  <div id="geiq_qualification_fields_block">
      <div class="form-group form-group-required"><label class="form-label" for="id_qualification_type">Type de qualification visé</label><select name="qualification_type" hx-trigger="change" hx-post="/apply/10/accept/reload_qualification_fields" hx-swap="outerHTML" hx-target="#geiq_qualification_fields_block" class="form-select" required id="id_qualification_type">
    <option value="">---------</option>
  
    <option value="STATE_DIPLOMA">Diplôme d&#x27;état ou titre homologué</option>
  
    <option value="CQP" selected>CQP</option>
  
    <option value="CCN">Positionnement de CCN</option>
  
  </select></div>
      <div class="form-group form-group-required"><label class="form-label" for="id_qualification_level">Niveau de qualification</label><select name="qualification_level" class="form-select" required id="id_qualification_level">
    <option value="" selected>---------</option>
  
    <option value="LEVEL_3">Niveau 3 (CAP, BEP)</option>
  
    <option value="LEVEL_4">Niveau 4 (BP, Bac général, Techno ou Pro, BT)</option>
  
    <option value="LEVEL_5">Niveau 5 ou + (Bac+2 ou +)</option>
  
    <option value="NOT_RELEVANT">Non concerné</option>
  
  </select></div>
      <div class="form-group form-group-required"><label class="form-label" for="id_planned_training_hours">Nombre d&#x27;heures de formation prévues</label><input type="number" name="planned_training_hours" value="0" min="0" class="form-control" placeholder="Nombre d&#x27;heures de formation prévues" required id="id_planned_training_hours"></div>
  </div>
  
  '''
# ---
# name: test_reload_qualification_fields[STATE_DIPLOMA]
  '''
  
  <div id="geiq_qualification_fields_block">
      <div class="form-group form-group-required"><label class="form-label" for="id_qualification_type">Type de qualification visé</label><select name="qualification_type" hx-trigger="change" hx-post="/apply/10/accept/reload_qualification_fields" hx-swap="outerHTML" hx-target="#geiq_qualification_fields_block" class="form-select" required id="id_qualification_type">
    <option value="">---------</option>
  
    <option value="STATE_DIPLOMA" selected>Diplôme d&#x27;état ou titre homologué</option>
  
    <option value="CQP">CQP</option>
  
    <option value="CCN">Positionnement de CCN</option>
  
  </select></div>
      <div class="form-group form-group-required"><label class="form-label" for="id_qualification_level">Niveau de qualification</label><select name="qualification_level" class="form-select" required id="id_qualification_level">
    <option value="" selected>---------</option>
  
    <option value="LEVEL_3">Niveau 3 (CAP, BEP)</option>
  
    <option value="LEVEL_4">Niveau 4 (BP, Bac général, Techno ou Pro, BT)</option>
  
    <option value="LEVEL_5">Niveau 5 ou + (Bac+2 ou +)</option>
  
  </select></div>
      <div class="form-group form-group-required"><label class="form-label" for="id_planned_training_hours">Nombre d&#x27;heures de formation prévues</label><input type="number" name="planned_training_hours" value="0" min="0" class="form-control" placeholder="Nombre d&#x27;heures de formation prévues" required id="id_planned_training_hours"></div>
  </div>
  
  '''
# ---
